--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@selemondev/vue3-marquee": "^0.0.8",
-    "@splinetool/runtime": "^1.9.43",
+    "@splinetool/runtime": "^1.10.31",
     "@tailwindcss/typography": "^0.5.16",
     "@vueuse/core": "^12.4.0",
     "@vueuse/motion": "^2.2.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "compression": "^1.8.1",
     "flyonui": "^1.3.0",
     "lodash": "^4.17.21",
     "pinia": "^2.2.6",
@@ -46,6 +47,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.4"
   }
